--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -5,10 +5,12 @@
       <div class="subscript">習慣づくりアプリ</div>
       <h1>Make Habits!!</h1>
     </div>
-    <div class="pull-right">
-      <%= link_to "新規登録", signup_path, class: "btn btn-primary btn-lg", style: "width: 100%; margin:40px 0 30px;" %>
-      <%= link_to "ログイン", "#", class: "btn btn-success btn-lg", style: "width: 100%" %>
-    </div>
+    <% unless logged_in? %>
+      <div class="pull-right">
+        <%= link_to "新規登録", signup_path, class: "btn btn-success btn-lg", style: "width: 100%; margin:40px 0 30px;" %>
+        <%= link_to "ログイン", login_path, class: "btn btn-primary btn-lg", style: "width: 100%" %>
+      </div>
+    <% end %>
   </div>
 </div>
 <div class="jumbotron explanation">
