--- a/app/views/makes/show.html.erb
+++ b/app/views/makes/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-6 col-xs-offset-3">
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
       <div class="panel-heading">
         <h2 class="panel-title"><%= @make.title %></h2>
       </div>
@@ -11,6 +11,6 @@
           <% end %>
         </ul>
       </div>
-  </div>
+    </div>
   </div>
 </div>
