--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
                 <%= current_user.name %>
               <% end %>
             </li>
-            <li><%= link_to "習慣を作る", "/makes/new" %></li>
+            <li><%= link_to "習慣を作る", "/habits/select" %></li>
             <li><%= link_to "ログアウト", logout_path, method: "delete" %></li>
           <% else %>
             <li><%= link_to "新規登録", signup_path %></li>
