create quit habit function

--- a/app/views/habits/select.html.erb
+++ b/app/views/habits/select.html.erb
@@ -4,5 +4,5 @@
   <%= link_to "作りたい習慣がある", "/makes/new",class: "btn btn-info btn-lg btn-block" %>
 </div>
 <div class="col-xs-6">
-  <%= link_to "やめたい習慣がある", "#", class: "btn btn-warning btn-lg btn-block" %>
+  <%= link_to "やめたい習慣がある", "/quits/new", class: "btn btn-warning btn-lg btn-block" %>
 </div>
