--- a/app/views/rules/make2.html.erb
+++ b/app/views/rules/make2.html.erb
@@ -9,7 +9,7 @@
 
 <div class="row">
   <div class="col-xs-8 col-xs-offset-2">
-    <%= form_for(@rule, url: "/rules/#{@make.id}/create") do |f|%>
+    <%= form_for(@rule, url: "/makes/#{@make.id}/create") do |f|%>
       <div class="form-group">
         <%= f.text_area :content, placeholder: "例）歯磨きが終わったら、スクワットを１回やる。", class: "form-control" %>
       </div>
