--- a/app/views/quits/show.html.erb
+++ b/app/views/quits/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-6 col-xs-offset-3">
-    <div class="panel panel-primary">
+    <div class="panel panel-warning">
       <div class="panel-heading">
         <h2 class="panel-title"><%= @quit.title %></h2>
       </div>
@@ -12,5 +12,6 @@
         </ul>
       </div>
     </div>
+    <%= link_to "一覧に戻る", current_user, class: "btn btn-success" %>
   </div>
 </div>
