--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -15,5 +15,9 @@
 </div>
 <div class="jumbotron explanation">
   <h2 class="page-header">Make Habits!! とは</h2>
-  説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文説明文
+  <p>
+    習慣を身につける、あるいはやめるための自分ルールを作成するアプリです。<br>
+    最初から大きな目標を立てると、挫折する可能性が高くなってしまいます。<br>
+    無理なく続けられる自分ルールを作成して習慣を身につけましょう！
+  </p>
 </div>
