--- a/app/views/rules/quit1.html.erb
+++ b/app/views/rules/quit1.html.erb
@@ -1,4 +1,4 @@
-<u><h1 class="text-center">身につけたい習慣：<%= @quit.title %></h1></u>
+<u><h1 class="text-center">やめたい習慣：<%= @quit.title %></h1></u>
 
 <h2 class="text-center">
   その習慣をついやってしまうのはどのような状況ですか？<br>
