--- a/app/views/rules/make4.html.erb
+++ b/app/views/rules/make4.html.erb
@@ -1,5 +1,5 @@
 <u><h1 class="text-center">身につけたい習慣：<%= @make.title %></h1></u>
-<u><h1 class="text-center">挫折しそうになる状況：<%= @situation %></h1></u>
+<u><h1 class="text-center">挫折しそうになる状況：<%= @obstacle %></h1></u>
 
 <h2 class="text-center">
   最後に、挫折しそうな状況になった時の<br>自分ルールを作りましょう。<br>
