--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,22 +6,22 @@
       <div class="panel-body">
         <%= form_for(@user) do |f| %>
           <div class="form-group">
-            <%= f.label :name, 'お名前' %>
+            <%= f.label :name %>
             <%= f.text_field :name, class: 'form-control' %>
           </div>
 
           <div class="form-group">
-            <%= f.label :email, 'メールアドレス' %>
+            <%= f.label :email %>
             <%= f.email_field :email, class: 'form-control' %>
           </div>
 
           <div class="form-group">
-            <%= f.label :password, 'パスワード' %>
+            <%= f.label :password %>
             <%= f.password_field :password, class: 'form-control' %>
           </div>
 
           <div class="form-group">
-            <%= f.label :password_confirmation, 'パスワード（確認）' %>
+            <%= f.label :password_confirmation %>
             <%= f.password_field :password_confirmation, class: 'form-control' %>
           </div>
 
